implemented get bookmark meta feature, introduced some other openapi frontends
